Fix return statement formatting in default.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,6 @@ server {
     server_name localhost;
 
     location / {
-        return 200 "NGINX is healthy\n";
+        return 200 "NGINX is healthy\n
     }
 }
